--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -2,7 +2,7 @@ name: Daily Data Update
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 1,15 * *'
   workflow_dispatch:
 
 permissions:
